package grpc

import (
	"context"
	"crypto/tls"
	"crypto/x509"
	"fmt"
	"net"
	"os"
	"strings"
	"sync"
	"time"

	"github.com/SafeMPC/mpc-signer/internal/config"
	"github.com/SafeMPC/mpc-signer/internal/mpc/node"
	pb "github.com/SafeMPC/mpc-signer/pb/mpc/v1"
	"github.com/kashguard/tss-lib/tss"
	"github.com/pkg/errors"
	"github.com/rs/zerolog/log"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials"
	"google.golang.org/grpc/credentials/insecure"
	"google.golang.org/grpc/keepalive"
)

// GRPCClient gRPCå®¢æˆ·ç«¯ï¼Œç”¨äºŽèŠ‚ç‚¹é—´é€šä¿¡
type GRPCClient struct {
	mu            sync.RWMutex
	conns         map[string]*grpc.ClientConn
	clients       map[string]pb.SignerServiceClient
	mgmtClients   map[string]interface{} // æš‚æ—¶ä½¿ç”¨ interface{}ï¼Œå¾…åŽç»­å®žçŽ°
	cfg           *ClientConfig
	nodeManager   *node.Manager
	nodeDiscovery *node.Discovery // ç”¨äºŽä»Ž Consul å‘çŽ°èŠ‚ç‚¹ä¿¡æ¯
	thisNodeID    string          // å½“å‰èŠ‚ç‚¹IDï¼ˆç”¨äºŽæ ‡è¯†æ¶ˆæ¯å‘é€æ–¹ï¼‰
}

// ClientConfig gRPCå®¢æˆ·ç«¯é…ç½®
type ClientConfig struct {
	TLSEnabled    bool
	TLSCertFile   string
	TLSKeyFile    string
	TLSCACertFile string
	Timeout       time.Duration
	KeepAlive     time.Duration
}

// NewGRPCClient åˆ›å»ºgRPCå®¢æˆ·ç«¯
func NewGRPCClient(cfg config.Server, nodeManager *node.Manager) (*GRPCClient, error) {
	// DKG åè®®å¯èƒ½éœ€è¦è¾ƒé•¿æ—¶é—´ï¼ˆå‡ åˆ†é’Ÿï¼‰ï¼Œè®¾ç½®æ›´é•¿çš„è¶…æ—¶æ—¶é—´
	// KeepAlive Timeout è®¾ç½®ä¸º 10 åˆ†é’Ÿï¼Œç¡®ä¿é•¿è¿è¡Œçš„ RPC è°ƒç”¨ä¸ä¼šè¢«ä¸­æ–­
	clientCfg := &ClientConfig{
		TLSEnabled:    cfg.MPC.TLSEnabled,
		TLSCertFile:   cfg.MPC.TLSCertFile,
		TLSKeyFile:    cfg.MPC.TLSKeyFile,
		TLSCACertFile: cfg.MPC.TLSCACertFile,
		Timeout:       10 * time.Minute, // å¢žåŠ åˆ° 10 åˆ†é’Ÿ
		KeepAlive:     10 * time.Minute, // å¢žåŠ åˆ° 10 åˆ†é’Ÿ
	}

	thisNodeID := cfg.MPC.NodeID
	if thisNodeID == "" {
		thisNodeID = "default-node"
	}

	return &GRPCClient{
		conns:         make(map[string]*grpc.ClientConn),
		clients:       make(map[string]pb.SignerServiceClient),
		mgmtClients:   make(map[string]interface{}),
		cfg:           clientCfg,
		nodeManager:   nodeManager,
		nodeDiscovery: nil, // ç¨åŽé€šè¿‡ SetNodeDiscovery è®¾ç½®
		thisNodeID:    thisNodeID,
	}, nil
}

// SetNodeDiscovery è®¾ç½®èŠ‚ç‚¹å‘çŽ°å™¨ï¼ˆç”¨äºŽä»Ž Consul èŽ·å–èŠ‚ç‚¹ä¿¡æ¯ï¼‰
func (c *GRPCClient) SetNodeDiscovery(discovery *node.Discovery) {
	c.mu.Lock()
	defer c.mu.Unlock()
	c.nodeDiscovery = discovery
}

// getOrCreateConnection èŽ·å–æˆ–åˆ›å»ºåˆ°æŒ‡å®šèŠ‚ç‚¹çš„è¿žæŽ¥
func (c *GRPCClient) getOrCreateConnection(ctx context.Context, nodeID string) (pb.SignerServiceClient, error) {
	c.mu.RLock()
	client, ok := c.clients[nodeID]
	c.mu.RUnlock()

	if ok {
		return client, nil
	}

	// èŽ·å–èŠ‚ç‚¹ä¿¡æ¯
	// é¦–å…ˆå°è¯•ä»Žæ•°æ®åº“èŽ·å–
	var nodeInfo *node.Node
	var err error
	nodeInfo, err = c.nodeManager.GetNode(ctx, nodeID)
	if err != nil {
		// å¦‚æžœä»Žæ•°æ®åº“èŽ·å–å¤±è´¥ï¼Œå°è¯•ä»Ž Consul æœåŠ¡å‘çŽ°ä¸­èŽ·å–
		if c.nodeDiscovery != nil {
			// ä»Ž Consul å‘çŽ°èŠ‚ç‚¹ï¼ˆå°è¯•å‘çŽ°æ‰€æœ‰ç±»åž‹çš„èŠ‚ç‚¹ï¼‰
			// æ³¨æ„ï¼šè¿™é‡Œæˆ‘ä»¬éœ€è¦çŸ¥é“èŠ‚ç‚¹ç±»åž‹ï¼Œä½†æš‚æ—¶å°è¯• signer å’Œ service
			for _, nodeType := range []node.NodeType{node.NodeTypeSigner, node.NodeTypeService} {
				// âœ… ä½¿ç”¨è¾ƒå°çš„ limitï¼ˆä¸Žå…¸åž‹å‚ä¸Žè€…æ•°é‡åŒ¹é…ï¼‰ï¼Œå¹¶å¿½ç•¥æ•°é‡ä¸è¶³çš„é”™è¯¯
				nodes, discoverErr := c.nodeDiscovery.DiscoverNodes(ctx, nodeType, node.NodeStatusActive, 3)
				// å³ä½¿è¿”å›žé”™è¯¯ï¼ˆèŠ‚ç‚¹æ•°ä¸è¶³ï¼‰ï¼Œä¹Ÿå¯èƒ½è¿”å›žäº†éƒ¨åˆ†èŠ‚ç‚¹ï¼Œç»§ç»­æŸ¥æ‰¾
				if discoverErr != nil {
					// å¿½ç•¥æ•°é‡ä¸è¶³çš„é”™è¯¯ï¼Œåªè¦æœ‰èŠ‚ç‚¹å°±ç»§ç»­
					if len(nodes) == 0 {
						continue
					}
				}

				// æŸ¥æ‰¾åŒ¹é…çš„èŠ‚ç‚¹
				for _, n := range nodes {
					if n.NodeID == nodeID {
						nodeInfo = n
						err = nil
						break
					}
				}
				if err == nil {
					break
				}
			}
		}

		// å¦‚æžœä»ç„¶å¤±è´¥ï¼Œè¿”å›žé”™è¯¯
		if err != nil {
			return nil, errors.Wrapf(err, "failed to get node info for %s (not found in database or Consul)", nodeID)
		}
	}

	// åˆ›å»ºè¿žæŽ¥
	c.mu.Lock()
	defer c.mu.Unlock()

	// åŒé‡æ£€æŸ¥
	if client, ok := c.clients[nodeID]; ok {
		return client, nil
	}

	// é…ç½®è¿žæŽ¥é€‰é¡¹
	var opts []grpc.DialOption

	// TLSé…ç½®
	if c.cfg.TLSEnabled {
		caPath := c.cfg.TLSCACertFile
		if caPath == "" {
			if envPath := os.Getenv("MPC_TLS_CA_CERT_FILE"); envPath != "" {
				caPath = envPath
			} else {
				caPath = "/app/certs/ca.crt"
			}
		}
		certFile := c.cfg.TLSCertFile
		keyFile := c.cfg.TLSKeyFile

		caBytes, err := os.ReadFile(caPath)
		if err != nil {
			return nil, errors.Wrap(err, "failed to load TLS CA certificate")
		}
		rootCAs := x509.NewCertPool()
		if ok := rootCAs.AppendCertsFromPEM(caBytes); !ok {
			return nil, errors.New("failed to append CA certificate")
		}

		tlsCfg := &tls.Config{
			RootCAs:    rootCAs,
			MinVersion: tls.VersionTLS12,
		}

		if certFile != "" && keyFile != "" {
			clientCert, err := tls.LoadX509KeyPair(certFile, keyFile)
			if err != nil {
				return nil, errors.Wrap(err, "failed to load client certificate/key")
			}
			tlsCfg.Certificates = []tls.Certificate{clientCert}
		}

		if host, _, err := net.SplitHostPort(nodeInfo.Endpoint); err == nil && host != "" {
			tlsCfg.ServerName = host
		}

		opts = append(opts, grpc.WithTransportCredentials(credentials.NewTLS(tlsCfg)))
	} else {
		opts = append(opts, grpc.WithTransportCredentials(insecure.NewCredentials()))
	}

	// KeepAliveé…ç½®
	opts = append(opts, grpc.WithKeepaliveParams(keepalive.ClientParameters{
		Time:                c.cfg.KeepAlive,
		Timeout:             c.cfg.Timeout,
		PermitWithoutStream: true,
	}))

	// å»ºç«‹è¿žæŽ¥
	log.Debug().Str("node_id", nodeID).Str("endpoint", nodeInfo.Endpoint).Msg("Dialing gRPC node")
	conn, err := grpc.DialContext(ctx, nodeInfo.Endpoint, opts...)
	if err != nil {
		log.Error().Err(err).Str("node_id", nodeID).Str("endpoint", nodeInfo.Endpoint).Msg("Failed to connect to gRPC node")
		return nil, errors.Wrapf(err, "failed to connect to node %s at %s", nodeID, nodeInfo.Endpoint)
	}
	log.Debug().Str("node_id", nodeID).Str("endpoint", nodeInfo.Endpoint).Msg("Successfully connected to gRPC node")

	// åˆ›å»ºå®¢æˆ·ç«¯
	client = pb.NewSignerServiceClient(conn)
	_ = client // mgmtClient æš‚æ—¶ä¸ä½¿ç”¨

	// ä¿å­˜è¿žæŽ¥å’Œå®¢æˆ·ç«¯
	c.conns[nodeID] = conn
	c.clients[nodeID] = client
	// mgmtClients å·²åˆ é™¤ï¼ˆå›¢é˜Ÿç­¾åŠŸèƒ½å·²ç§»é™¤ï¼‰

	return client, nil
}

// getOrCreateMgmtConnection èŽ·å–æˆ–åˆ›å»ºåˆ°æŒ‡å®šèŠ‚ç‚¹çš„ Management Client è¿žæŽ¥
func (c *GRPCClient) getOrCreateMgmtConnection(ctx context.Context, nodeID string) (interface{}, error) {
	c.mu.RLock()
	client, ok := c.mgmtClients[nodeID]
	c.mu.RUnlock()

	if ok {
		return client, nil
	}

	// å¤ç”¨è¿žæŽ¥åˆ›å»ºé€»è¾‘ (getOrCreateConnection ä¼šåˆå§‹åŒ–ä¸¤ä¸ª Client)
	_, err := c.getOrCreateConnection(ctx, nodeID)
	if err != nil {
		return nil, err
	}

	c.mu.RLock()
	client = c.mgmtClients[nodeID]
	c.mu.RUnlock()

	return client, nil
}

// AddWalletMember, RemoveWalletMember, SetSigningPolicy, GetSigningPolicy å·²åˆ é™¤ï¼ˆå›¢é˜Ÿç­¾åŠŸèƒ½å·²ç§»é™¤ï¼‰

// SendStartDKG è°ƒç”¨å‚ä¸Žè€…çš„ StartDKG RPC
func (c *GRPCClient) SendStartDKG(ctx context.Context, nodeID string, req *pb.StartDKGRequest) (*pb.StartDKGResponse, error) {
	log.Debug().
		Str("node_id", nodeID).
		Str("key_id", req.KeyId).
		Msg("Sending StartDKG RPC to participant")

	client, err := c.getOrCreateConnection(ctx, nodeID)
	if err != nil {
		log.Error().Err(err).Str("node_id", nodeID).Msg("Failed to get gRPC connection")
		return nil, errors.Wrapf(err, "failed to get connection to node %s", nodeID)
	}

	log.Debug().
		Str("node_id", nodeID).
		Str("key_id", req.KeyId).
		Msg("Calling StartDKG RPC")

	resp, err := client.StartDKG(ctx, req)
	if err != nil {
		log.Error().
			Err(err).
			Str("node_id", nodeID).
			Str("key_id", req.KeyId).
			Msg("StartDKG RPC call failed")
		return nil, err
	}

	log.Debug().
		Str("node_id", nodeID).
		Str("key_id", req.KeyId).
		Bool("started", resp.Started).
		Str("message", resp.Message).
		Msg("StartDKG RPC call succeeded")

	return resp, nil
}

// SendStartSign è°ƒç”¨å‚ä¸Žè€…çš„ StartSign RPC
func (c *GRPCClient) SendStartSign(ctx context.Context, nodeID string, req *pb.StartSignRequest) (*pb.StartSignResponse, error) {
	log.Debug().
		Str("node_id", nodeID).
		Str("key_id", req.KeyId).
		Str("session_id", req.SessionId).
		Msg("Sending StartSign RPC to participant")

	client, err := c.getOrCreateConnection(ctx, nodeID)
	if err != nil {
		log.Error().Err(err).Str("node_id", nodeID).Msg("Failed to get gRPC connection")
		return nil, errors.Wrapf(err, "failed to get connection to node %s", nodeID)
	}

	log.Debug().
		Str("node_id", nodeID).
		Str("key_id", req.KeyId).
		Str("session_id", req.SessionId).
		Msg("Calling StartSign RPC")

	resp, err := client.StartSign(ctx, req)
	if err != nil {
		log.Error().
			Err(err).
			Str("node_id", nodeID).
			Str("key_id", req.KeyId).
			Str("session_id", req.SessionId).
			Msg("StartSign RPC call failed")
		return nil, err
	}

	log.Debug().
		Str("node_id", nodeID).
		Str("key_id", req.KeyId).
		Str("session_id", req.SessionId).
		Bool("started", resp.Started).
		Str("message", resp.Message).
		Msg("StartSign RPC call succeeded")

	return resp, nil
}

// SendSigningMessage å‘é€ç­¾ååè®®æ¶ˆæ¯åˆ°ç›®æ ‡èŠ‚ç‚¹
func (c *GRPCClient) SendSigningMessage(ctx context.Context, nodeID string, msg tss.Message, sessionID string) error {
	// é˜²æ­¢èŠ‚ç‚¹å‘è‡ªå·±å‘é€æ¶ˆæ¯
	if nodeID == c.thisNodeID {
		log.Warn().
			Str("session_id", sessionID).
			Str("node_id", nodeID).
			Str("this_node_id", c.thisNodeID).
			Msg("Attempted to send signing message to self, skipping")
		return nil // ä¸è¿”å›žé”™è¯¯ï¼Œåªæ˜¯è·³è¿‡
	}

	// å¯¹äºŽç§»åŠ¨ç«¯èŠ‚ç‚¹ï¼ˆmobile-* æˆ– client-*ï¼‰ï¼Œç›´æŽ¥é€šè¿‡ Service ä¸­ç»§ï¼Œä¸å°è¯•ç›´æŽ¥è¿žæŽ¥
	isMobileNode := strings.HasPrefix(nodeID, "mobile-") || strings.HasPrefix(nodeID, "client-")

	var client pb.SignerServiceClient
	var err error
	if !isMobileNode {
		// éžç§»åŠ¨ç«¯èŠ‚ç‚¹ï¼Œå°è¯•ç›´æŽ¥è¿žæŽ¥
		client, err = c.getOrCreateConnection(ctx, nodeID)
	}

	if isMobileNode || err != nil {
		// ç§»åŠ¨ç«¯èŠ‚ç‚¹æˆ–ç›´æŽ¥è¿žæŽ¥å¤±è´¥ï¼Œé€šè¿‡ Service ä¸­ç»§
		if isMobileNode {
			log.Info().
				Str("session_id", sessionID).
				Str("target_node_id", nodeID).
				Msg("Mobile node detected, routing via Service relay")
		} else {
			log.Warn().
				Err(err).
				Str("session_id", sessionID).
				Str("target_node_id", nodeID).
				Msg("Failed to get direct connection to target node, attempting to relay via Service")
		}

		// å°è¯•å‘çŽ° Service èŠ‚ç‚¹
		if c.nodeDiscovery != nil {
			serviceNodes, discoverErr := c.nodeDiscovery.DiscoverNodes(ctx, node.NodeTypeService, node.NodeStatusActive, 1)
			if discoverErr == nil && len(serviceNodes) > 0 {
				serviceNode := serviceNodes[0]
				serviceClient, serviceErr := c.getOrCreateConnection(ctx, serviceNode.NodeID)
				if serviceErr == nil {
					// é€šè¿‡ Service ä¸­ç»§æ¶ˆæ¯
					msgBytes, _, serializeErr := msg.WireBytes()
					if serializeErr != nil {
						return errors.Wrap(serializeErr, "failed to serialize tss message")
					}

					round := int32(0)
					isBroadcast := len(msg.GetTo()) == 0
					if isBroadcast {
						round = -1
					}

					relayReq := &pb.RelayMessageRequest{
						SessionId:   sessionID,
						FromNodeId:  c.thisNodeID,
						ToNodeId:    nodeID,
						MessageData: msgBytes,
						Round:       round,
						IsBroadcast: isBroadcast,
						Timestamp:   time.Now().Format(time.RFC3339),
					}

					resp, relayErr := serviceClient.RelayProtocolMessage(ctx, relayReq)
					if relayErr == nil && resp.Accepted {
						log.Info().
							Str("session_id", sessionID).
							Str("target_node_id", nodeID).
							Str("service_node_id", serviceNode.NodeID).
							Msg("Successfully relayed signing message via Service")
						return nil
					}
					if relayErr != nil {
						log.Warn().
							Err(relayErr).
							Str("session_id", sessionID).
							Str("target_node_id", nodeID).
							Str("service_node_id", serviceNode.NodeID).
							Msg("Failed to relay message via Service")
					}
				}
			}
		}

		// å¦‚æžœ Service ä¸­ç»§å¤±è´¥ï¼Œè¿”å›žé”™è¯¯
		if isMobileNode {
			return errors.Errorf("failed to relay message to mobile node %s via Service (no Service node available or relay failed)", nodeID)
		}
		return errors.Wrapf(err, "failed to get connection to node %s", nodeID)
	}

	// åºåˆ—åŒ–tss-libæ¶ˆæ¯
	// WireBytes()è¿”å›ž (wireBytes []byte, routing *MessageRouting, err error)
	msgBytes, routing, err := msg.WireBytes()
	if err != nil {
		return errors.Wrap(err, "failed to serialize tss message")
	}

	// ç¡®å®šè½®æ¬¡ï¼ˆtss-libçš„MessageRoutingå¯èƒ½ä¸åŒ…å«Roundå­—æ®µï¼Œä½¿ç”¨0ä½œä¸ºé»˜è®¤å€¼ï¼‰
	// å®žé™…è½®æ¬¡ä¿¡æ¯å¯ä»¥ä»Žæ¶ˆæ¯å†…å®¹ä¸­æå–ï¼Œè¿™é‡Œç®€åŒ–å¤„ç†
	round := int32(0)
	isBroadcast := len(msg.GetTo()) == 0
	if isBroadcast {
		round = -1
	}

	// âœ… è¯¦ç»†æ—¥å¿—ï¼šè®°å½•æ¶ˆæ¯å‘é€è¯¦æƒ…
	msgType := fmt.Sprintf("%T", msg)
	log.Info().
		Str("session_id", sessionID).
		Str("this_node_id", c.thisNodeID).
		Str("target_node_id", nodeID).
		Str("message_type", msgType).
		Int32("round", round).
		Bool("is_broadcast", isBroadcast).
		Int("msg_bytes_len", len(msgBytes)).
		Int("target_count", len(msg.GetTo())).
		Interface("routing", routing).
		Msg("ðŸ” [DIAGNOSTIC] Sending signing message via gRPC")

	// ä½¿ç”¨ RelayProtocolMessage å‘é€æ¶ˆæ¯ï¼ˆé€šè¿‡ Service ä¸­ç»§ï¼‰
	req := &pb.RelayMessageRequest{
		SessionId:   sessionID,
		FromNodeId:  c.thisNodeID,
		ToNodeId:    nodeID,
		MessageData: msgBytes,
		Round:       round,
		IsBroadcast: isBroadcast,
		Timestamp:   time.Now().Format(time.RFC3339),
	}

	resp, err := client.RelayProtocolMessage(ctx, req)
	if err != nil {
		log.Error().
			Err(err).
			Str("session_id", sessionID).
			Str("this_node_id", c.thisNodeID).
			Str("target_node_id", nodeID).
			Msg("ðŸ” [DIAGNOSTIC] Failed to send signing message via gRPC")
		return errors.Wrapf(err, "failed to send signing message to node %s", nodeID)
	}

	log.Info().
		Str("session_id", sessionID).
		Str("this_node_id", c.thisNodeID).
		Str("target_node_id", nodeID).
		Bool("accepted", resp.Accepted).
		Str("message_id", resp.MessageId).
		Msg("ðŸ” [DIAGNOSTIC] Signing message sent successfully via gRPC")

	return nil
}

// SendKeygenMessage å‘é€DKGåè®®æ¶ˆæ¯åˆ°ç›®æ ‡èŠ‚ç‚¹
func (c *GRPCClient) SendKeygenMessage(ctx context.Context, nodeID string, msg tss.Message, sessionID string, isBroadcast bool) error {
	// é˜²æ­¢èŠ‚ç‚¹å‘è‡ªå·±å‘é€æ¶ˆæ¯
	if nodeID == c.thisNodeID {
		log.Warn().
			Str("session_id", sessionID).
			Str("node_id", nodeID).
			Str("this_node_id", c.thisNodeID).
			Msg("Attempted to send DKG message to self, skipping")
		return nil // ä¸è¿”å›žé”™è¯¯ï¼Œåªæ˜¯è·³è¿‡
	}

	// å¯¹äºŽç§»åŠ¨ç«¯èŠ‚ç‚¹ï¼ˆmobile-* æˆ– client-*ï¼‰ï¼Œç›´æŽ¥é€šè¿‡ Service ä¸­ç»§ï¼Œä¸å°è¯•ç›´æŽ¥è¿žæŽ¥
	isMobileNode := strings.HasPrefix(nodeID, "mobile-") || strings.HasPrefix(nodeID, "client-")

	var client pb.SignerServiceClient
	var err error
	if !isMobileNode {
		// éžç§»åŠ¨ç«¯èŠ‚ç‚¹ï¼Œå°è¯•ç›´æŽ¥è¿žæŽ¥
		client, err = c.getOrCreateConnection(ctx, nodeID)
	}

	if isMobileNode || err != nil {
		// ç§»åŠ¨ç«¯èŠ‚ç‚¹æˆ–ç›´æŽ¥è¿žæŽ¥å¤±è´¥ï¼Œé€šè¿‡ Service ä¸­ç»§
		if isMobileNode {
			log.Info().
				Str("session_id", sessionID).
				Str("target_node_id", nodeID).
				Msg("Mobile node detected, routing via Service relay")
		} else {
			log.Warn().
				Err(err).
				Str("session_id", sessionID).
				Str("target_node_id", nodeID).
				Msg("Failed to get direct connection to target node, attempting to relay via Service")
		}

		// å°è¯•å‘çŽ° Service èŠ‚ç‚¹
		if c.nodeDiscovery != nil {
			serviceNodes, discoverErr := c.nodeDiscovery.DiscoverNodes(ctx, node.NodeTypeService, node.NodeStatusActive, 1)
			if discoverErr != nil {
				log.Warn().
					Err(discoverErr).
					Str("session_id", sessionID).
					Msg("Failed to discover Service node for DKG relay")
			} else if len(serviceNodes) == 0 {
				log.Warn().
					Str("session_id", sessionID).
					Msg("No Service nodes found for DKG message relay")
			} else {
				serviceNode := serviceNodes[0]
				serviceClient, serviceErr := c.getOrCreateConnection(ctx, serviceNode.NodeID)
				if serviceErr != nil {
					log.Error().
						Err(serviceErr).
						Str("session_id", sessionID).
						Str("service_node_id", serviceNode.NodeID).
						Msg("Failed to connect to Service node for DKG message relay")
				} else {
					// é€šè¿‡ Service ä¸­ç»§æ¶ˆæ¯
					msgBytes, _, serializeErr := msg.WireBytes()
					if serializeErr != nil {
						return errors.Wrap(serializeErr, "failed to serialize tss message")
					}

					round := int32(0)
					if len(msg.GetTo()) == 0 || isBroadcast {
						round = -1
					}

					relayReq := &pb.RelayMessageRequest{
						SessionId:   sessionID,
						FromNodeId:  c.thisNodeID,
						ToNodeId:    nodeID,
						MessageData: msgBytes,
						Round:       round,
						IsBroadcast: isBroadcast,
						Timestamp:   time.Now().Format(time.RFC3339),
					}

					resp, relayErr := serviceClient.RelayProtocolMessage(ctx, relayReq)
					if relayErr != nil {
						log.Error().
							Err(relayErr).
							Str("session_id", sessionID).
							Str("target_node_id", nodeID).
							Str("service_node_id", serviceNode.NodeID).
							Msg("RelayProtocolMessage call failed for DKG")
					} else if resp != nil {
						if resp.Accepted {
							log.Info().
								Str("session_id", sessionID).
								Str("target_node_id", nodeID).
								Str("service_node_id", serviceNode.NodeID).
								Msg("Successfully relayed DKG message via Service")
							return nil
						} else {
							log.Warn().
								Str("session_id", sessionID).
								Str("target_node_id", nodeID).
								Str("service_node_id", serviceNode.NodeID).
								Str("message_id", resp.MessageId).
								Msg("Service rejected DKG relay request")
						}
					}
				}
			}
		}

		// å¦‚æžœ Service ä¸­ç»§å¤±è´¥ï¼Œè¿”å›žé”™è¯¯
		if isMobileNode {
			return errors.Errorf("failed to relay message to mobile node %s via Service (no Service node available or relay failed)", nodeID)
		}
		return errors.Wrapf(err, "failed to get connection to node %s", nodeID)
	}

	// åºåˆ—åŒ–tss-libæ¶ˆæ¯
	msgBytes, _, err := msg.WireBytes()
	if err != nil {
		return errors.Wrap(err, "failed to serialize tss message")
	}

	// ç¡®å®šè½®æ¬¡ï¼ˆtss-libçš„MessageRoutingå¯èƒ½ä¸åŒ…å«Roundå­—æ®µï¼Œä½¿ç”¨0ä½œä¸ºé»˜è®¤å€¼ï¼‰
	round := int32(0)
	// å¦‚æžœ tss æ¶ˆæ¯æ²¡æœ‰ç›®æ ‡ï¼ˆbroadcastï¼‰æˆ–ä¸Šå±‚æ ‡è®°ä¸ºå¹¿æ’­ï¼Œåˆ™ä½¿ç”¨ -1
	if len(msg.GetTo()) == 0 || isBroadcast {
		round = -1
	}

	log.Debug().
		Str("session_id", sessionID).
		Str("target_node_id", nodeID).
		Int("to_count", len(msg.GetTo())).
		Bool("is_broadcast_flag", isBroadcast).
		Int32("round_set", round).
		Msg("Sending DKG ShareRequest via gRPC")

	// ä½¿ç”¨ RelayProtocolMessage å‘é€æ¶ˆæ¯ï¼ˆé€šè¿‡ Service ä¸­ç»§ï¼‰
	relayReq := &pb.RelayMessageRequest{
		SessionId:   sessionID,
		FromNodeId:  c.thisNodeID,
		ToNodeId:    nodeID,
		MessageData: msgBytes,
		Round:       round,
		IsBroadcast: isBroadcast,
		Timestamp:   time.Now().Format(time.RFC3339),
	}

	resp, err := client.RelayProtocolMessage(ctx, relayReq)
	if err != nil {
		return errors.Wrapf(err, "failed to send keygen message to node %s (sessionID: %s)", nodeID, sessionID)
	}

	if !resp.Accepted {
		return errors.Errorf("node %s rejected keygen message", nodeID)
	}
	if err != nil {
		return errors.Wrapf(err, "failed to send keygen message to node %s (sessionID: %s)", nodeID, sessionID)
	}

	if !resp.Accepted {
		return errors.Errorf("node %s rejected keygen message", nodeID)
	}

	// è¿™æ˜¯ä¸€ä¸ªéžå¸¸è¯¦ç»†çš„æ—¥å¿—ï¼Œä»…åœ¨è°ƒè¯•æ—¶å¯ç”¨
	// fmt.Printf("Successfully sent keygen message to %s (round: %d, len: %d)\n", nodeID, round, len(msgBytes))

	return nil
}

// SendDKGStartNotification å‘é€ DKG å¯åŠ¨é€šçŸ¥ç»™ participant
func (c *GRPCClient) SendDKGStartNotification(ctx context.Context, nodeID string, sessionID string) error {
	client, err := c.getOrCreateConnection(ctx, nodeID)
	if err != nil {
		return errors.Wrapf(err, "failed to get connection to node %s", nodeID)
	}

	// å‘é€ç‰¹æ®Šçš„ "DKG_START" æ¶ˆæ¯ï¼ˆé€šè¿‡ Service ä¸­ç»§ï¼‰
	req := &pb.RelayMessageRequest{
		SessionId:   sessionID,
		FromNodeId:  c.thisNodeID,
		ToNodeId:    nodeID,
		MessageData: []byte("DKG_START"), // ç‰¹æ®Šæ ‡è®°ï¼Œparticipant ä¼šè¯†åˆ«å¹¶å¯åŠ¨ DKG
		Round:       0,
		IsBroadcast: false,
		Timestamp:   time.Now().Format(time.RFC3339),
	}

	_, err = client.RelayProtocolMessage(ctx, req)
	if err != nil {
		return errors.Wrapf(err, "failed to send DKG start notification to node %s (sessionID: %s)", nodeID, sessionID)
	}

	return nil
}

// CloseConnection å…³é—­åˆ°æŒ‡å®šèŠ‚ç‚¹çš„è¿žæŽ¥
func (c *GRPCClient) CloseConnection(nodeID string) error {
	c.mu.Lock()
	defer c.mu.Unlock()

	if conn, ok := c.conns[nodeID]; ok {
		if err := conn.Close(); err != nil {
			return errors.Wrapf(err, "failed to close connection to node %s", nodeID)
		}
		delete(c.conns, nodeID)
		delete(c.clients, nodeID)
		// mgmtClients å·²åˆ é™¤ï¼ˆå›¢é˜Ÿç­¾åŠŸèƒ½å·²ç§»é™¤ï¼‰
	}

	return nil
}

// SendStartResharing å¯†é’¥è½®æ¢åŠŸèƒ½å·²åˆ é™¤
func (c *GRPCClient) SendStartResharing(ctx context.Context, nodeID string, req interface{}) (interface{}, error) {
	return nil, errors.New("key rotation (resharing) is not supported")
}

// Close å…³é—­æ‰€æœ‰è¿žæŽ¥
func (c *GRPCClient) Close() error {
	c.mu.Lock()
	defer c.mu.Unlock()

	var errs []error
	for nodeID, conn := range c.conns {
		if err := conn.Close(); err != nil {
			errs = append(errs, errors.Wrapf(err, "failed to close connection to node %s", nodeID))
		}
	}

	c.conns = make(map[string]*grpc.ClientConn)
	c.clients = make(map[string]pb.SignerServiceClient)
	c.mgmtClients = make(map[string]interface{})

	if len(errs) > 0 {
		return errors.Errorf("errors closing connections: %v", errs)
	}

	return nil
}
